--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=your_db_user
-DB_PASSWORD=your_db_password
+DB_USER=hermasstaff
+DB_PASSWORD=hermas1234
 DB_NAME=subzam_db
 JWT_SECRET=your_jwt_secret
